--- a/main.css
+++ b/main.css
@@ -6,7 +6,8 @@
 
 body{
     font-family: 'Montserrat', sans-serif;
-    background: url("beautiful-nature-view-green-leaf-260nw-1917605045.jpg") left 70% top 32%/cover no-repeat;
+    background: url("beautiful-nature-view-green-leaf-260nw-1917605045.jpg") left 70% top 100%/cover no-repeat;
+    height:100vh;
 }
 .main-heading{
     margin-left: 40%;
