--- a/main.css
+++ b/main.css
@@ -29,7 +29,7 @@ body{
    width:45rem;
    height:50rem;
    padding: 3rem;
-  /*  background: rgba(0, 0, 0, 0.356);  */
+   background:rgba(255, 255, 255, 0.034);  
    box-shadow: 2px 2px 9px 0.8px black;
 }
 .login-details input,
