--- a/main.css
+++ b/main.css
@@ -169,7 +169,7 @@ border:1px solid rgba(255, 255, 255, 0.034);
 }
 body{
     font-family: 'Montserrat', sans-serif;
-    background: url("beautiful-nature-view-green-leaf-260nw-1917605045.jpg") left 5% top 150%/cover no-repeat;
+    background: url("beautiful-nature-view-green-leaf-260nw-1917605045\ -\ Copy.jpg") left 70% top 100%/cover no-repeat;
     
     height:40vh;
     width:35vh;
