--- a/main.css
+++ b/main.css
@@ -123,7 +123,7 @@ border:1px solid rgba(255, 255, 255, 0.034);
    border-radius: 30rem;
    border:1px solid rgba(255, 255, 255, 0.335);
    background: rgba(255, 255, 255, 0.335);
-   width:15rem;
+   width:16rem;
    margin-left:0;
   
 }
@@ -156,8 +156,8 @@ border:1px solid rgba(255, 255, 255, 0.034);
 
 .main-heading{
     margin-left: 30%;
-    font-size:1.5rem;
-    margin-top: 0;
+    font-size:1.3rem;
+    margin-top: 3%;
      color:rgba(0, 0, 0, 0.555); 
    
 }
