--- a/main.css
+++ b/main.css
@@ -114,7 +114,7 @@ border:1px solid rgba(255, 255, 255, 0.034);
           width:19.5rem;
           height:30rem;
           padding: 2rem;
-          /* background:rgba(255, 255, 255, 0.034);    */
+          background:rgba(255, 255, 255, 0.034);    
           box-shadow: 2px 2px 9px 0.8px black;
        }
        .login-details input,
@@ -155,9 +155,9 @@ border:1px solid rgba(255, 255, 255, 0.034);
 }
 
 .main-heading{
-    margin-left: 30%;
-    font-size:1.3rem;
-    margin-top: 3%;
+    margin-left: 35%;
+    font-size:1.1rem;
+    margin-top: 5%;
      color:rgba(0, 0, 0, 0.555); 
    
 }
