--- a/main.css
+++ b/main.css
@@ -173,7 +173,7 @@ body{
     font-family: 'Montserrat', sans-serif;
     background: url("beautiful-nature-view-green-leaf-260nw-1917605045\ -\ Copy.jpg") left 70% top 100%/cover no-repeat;
     
-    height:45vh;
+    height:100%;
     width:30vw;
     margin:5px;
 
