--- a/main.css
+++ b/main.css
@@ -171,10 +171,14 @@ border:1px solid rgba(255, 255, 255, 0.034);
 }
 body{
     font-family: 'Montserrat', sans-serif;
-    background: url("beautiful-nature-view-green-leaf-260nw-1917605045\ -\ Copy.jpg") left 70% top 100%/cover no-repeat;
+    background: url("beautiful-nature-view-green-leaf-260nw-1917605045\ -\ Copy.jpg") left 70% top 90%/cover no-repeat;
     
-    height:100%;
+    height:100vh;
     width:30vw;
     margin:5px;
 
+}
+html{
+    height:100vh;
+}
 }
