--- a/main.css
+++ b/main.css
@@ -97,12 +97,11 @@ border:1px solid rgba(255, 255, 255, 0.034);
 @media (max-width:39rem){
     .login-details{
    
-      
+      margin-top:6rem;
       margin-right: auto;
       margin-left:auto;
-         position: absolute;
-         left:auto;
-         right:auto;
+         position: static;
+        
          
        border:1px solid rgba(255, 255, 255, 0.034);
           font-size:1.5rem;
